# osint-tool

./: .env.example  .gitignore  README.md  TODO.md  main.py  pyproject.toml
data/output/: tapi.org_info.json
data/template/: pentest_proposal_template.docx
src/: recon.py  url_scanning.py
src/osint/commands/: scan.py
src/osint/core/: scanner_manager.py
src/osint/models/: result.py  risk.py  target.py
src/osint/services/: api_service.py  dns_service.py  geo_service.py  header_service.py  risk_service.py  shodan_service.py  ssl_service.py  subdomain_service.py  tech_service.py  wayback_service.py  whois_service.py
src/osint/validators/: url_validator.py
