[project]
name = "osint-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dnspython>=2.8.0",
    "fastapi>=0.138.2",
    "httpx>=0.28.1",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-wappalyzer>=0.3.1",
    "python-whois>=0.9.6",
    "requests>=2.34.2",
    "rich>=15.0.0",
    "setuptools>=82.0.1",
    "shodan>=1.31.0",
    "typer>=0.26.8",
    "validators>=0.35.0",
]
